Fix absolute paths to relative

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="favicon16.png" />
 
-    <link rel="stylesheet" href="/css/skaut-design.css" />
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="css/skaut-design.css" />
+    <link rel="stylesheet" href="css/styles.css" />
 
     <title>Skaut design</title>
   </head>
@@ -18,7 +18,7 @@
       <div class="container">
         <div class="navbar-brand">
           <a href="/" class="navbar-item is-paddingless">
-            <img src="/img/logo/SKAUT_horizontalni_logo.svg" />
+            <img src="img/logo/SKAUT_horizontalni_logo.svg" />
           </a>
           <span class="navbar-burger burger" data-target="navbarTop">
             <span aria-hidden="true"></span>
