No text decoration on buttons

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
               </p>
               <p class="column is-narrow">
                 <button class="button is-link">Přejít do e-shopu&nbsp;&nbsp;&gt;</button>
+                <a class="button is-link">Tlačítko z odkazu</a>
               </p>
             </div>
           </div>
