--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <a href="#Media" class="navbar-item sk-menu-item">Boxy</a>
             <a href="#Formular" class="navbar-item sk-menu-item">Formulář</a>
             <a href="#Tabulka" class="navbar-item sk-menu-item">Tabulka</a>
+            <a href="#Timeline" class="navbar-item sk-menu-item">Časová osa</a>
           </div>
         </div>
       </div>
@@ -246,6 +247,56 @@
           </div>
 
           <div class="columns"></div>
+        </div>
+      </section>
+
+      <section class="section" id="Timeline">
+        <div class="container">
+          <h2 class="title is-2 has-text-centered sk-underline is-green">Časová osa</h2>
+
+          <section class="section">
+            <div class="timeline is-centered">
+              <header class="timeline-header">
+                <span class="tag is-medium is-primary">2018</span>
+              </header>
+              <div class="timeline-item">
+                <div class="timeline-marker"></div>
+                <div class="timeline-content">
+                  <h2 class="title is-5 is-uppercase">
+                    <a href="#">
+                      Leden - Výprava za sněhem
+                    </a>
+                  </h2>
+                  <p>
+                    <a href="#">
+                      <img src="./img/examples/hero4.jpg" style="width:340px" />
+                    </a>
+                  </p>
+                </div>
+              </div>
+              <div class="timeline-item">
+                <div class="timeline-marker"></div>
+                <div class="timeline-content">
+                  <h2 class="title is-5">Duben - Výprava pod stany</h2>
+                  <p>
+                    <img src="./img/examples/hero4.jpg" style="width:340px" />
+                  </p>
+                </div>
+              </div>
+              <header class="timeline-header">
+                <span class="tag is-medium is-primary">2017</span>
+              </header>
+              <div class="timeline-item">
+                <div class="timeline-marker"></div>
+                <div class="timeline-content">
+                  <h2 class="title is-5">Prosinec - Vánoční akce</h2>
+                  <p>
+                    <img src="./img/examples/hero4.jpg" style="width:340px" />
+                  </p>
+                </div>
+              </div>
+            </div>
+          </section>
         </div>
       </section>
     </main>
